- Added: Attach optional PDF invoice document to order mails (Ticket #9)
- Added: Digits (min. length) for order number
- Added: The Order ID is starting from 1 when changing the prefix
- Added "Edit Multiple" to Order Management (Ticket #439)
- Added: Use cart template for empty message (Ticket #427)
- Added: Images and image descriptions can be translated (Ticket #401)
- Improved: Better Isotope module handling, including callback support
- Improved: Moved multilingual support to its own extension "isotope_multilingual" with lot more options
- Improved: Hide payment information if checkout total is 0
- Improved: Authorize.net failed transaction response handling & log data
- Improved: Better usage of IsotopeBackend class
- Improved: Delay loading of subdivions against memory issues (Ticket #223)
- Improved: Updated ePay form payment to use a template
- Improved: Show customer address on ePay backend
- Improved: SQL key/index optimizations
- Improved number of SQL queries
- Improved: Better formatting to attributes list. Show attribute name in product type setup wizard.
- Improved: Show field label not value in quick edit mode
- Improved: Show "invisible" icon for products with start/stop date outside today
- Improved: More unique element IDs to load ajax into the right container (Ticket #291)
- Improved: Use <div> not <span> for attribute containers (Ticket #203)
- Improved: Only create cart in database if necessary (will save a lot of auto_increment IDs)
- Improved: Blair has rewritten Authorize.net's payment calls
- Improved: Related products & quick products now use the product tree and allow for variant selection
- Improved: All product collections can be printed to HTML/PDF
- Improved: Addresses are now linked to the store config ID
- Improved: Drag & Drop of product sorting in categories
- Improved: Additional CSS classes for product list (Ticket #432)
- Improved: Moved $GLOBALS['ISO_PERPAGE'] to filter module setting (Ticket #70)