@@ -29,6 +29,7 @@ Version 0.3.beta1
 - Added "Edit Multiple" to Order Management (Ticket #439)
 - Added: Use cart template for empty message (Ticket #427)
 - Added: Images and image descriptions can be translated (Ticket #401)
+- Added: IsotopeTemplate now supports Contao 2.10 template types (Ticket #456)
 - Improved: Better Isotope module handling, including callback support
 - Improved: Moved multilingual support to its own extension "isotope_multilingual" with lot more options
 - Improved: Hide payment information if checkout total is 0
